# Gen6d-for-U

./: README.md  readme.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.fish
devel/include/pose_estimation_pkg/: Pose6D.h
devel/lib/pkgconfig/: pose_estimation_pkg.pc  realsense2_camera.pc  realsense2_description.pc  realsense_pkg.pc
devel/lib/realsense2_camera/: list_device_camera
devel/share/pose_estimation_pkg/cmake/: pose_estimation_pkg-msg-extras.cmake  pose_estimation_pkg-msg-paths.cmake  pose_estimation_pkgConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/realsense_pkg/cmake/: realsense_pkgConfig.cmake
devel/share/roseus/ros/pose_estimation_pkg/: manifest.l
src/pose_estimation_pkg/: CMakeLists.txt  package.xml
src/pose_estimation_pkg/scripts/: Foundationclass.py  Utils.py  datareader.py  formask2.py  get_png.py  my_train.py  pose22.py  pose_estimation_phb.py  pose_estimation_pub.py  posepush.py  posepush2.py  posepush3.py  slamget.py  slamget2.py  twoca.py  副本.py
src/realsense_pkg/: CMakeLists.txt
src/realsense_pkg/launch/: realsense.launch
src/realsense_pkg/src/: 56.py
src/rm65/: readme.md  readmebi.md
src/rm65/fsm_pipline/: Dexhand_grasping.py  Dexhand_insert.py  task_fsm.py
src/rm65/hardware/: RM65_6FB.py  realsense_camera.py  rh_hand_RH56DFTP_2R.py
src/rm65/perception_ws/devel/: .catkin  local_setup.fish  setup.fish
src/rm65/perception_ws/devel/include/rm_msgs/: Err.h  (+24 more)
(+248 files in other folders)
